Hoàng Nhi - Update code

--- a/FE/Views/Home/Index.cshtml
+++ b/FE/Views/Home/Index.cshtml
@@ -202,13 +202,15 @@
                                class="w-100"
                                type="text"
                                placeholder="Tìm kiếm"
+                               autocomplete="off"
                                oninput="searchMessage()">
                     </div>
                 </div>
             </div>
             @* Body *@
             <div id="MessageList_Body"
-                 class="card-body">
+                 class="card-body"
+                 style="padding: 6px; height: calc(100vh - 126px); overflow-x: hidden; overflow-y: auto">
                 Danh sách tin nhắn
             </div>
         </div>
@@ -231,6 +233,9 @@
     $(document).ready(function () {
         // Thay đổi giao diện khi lần đầu truy cập vào trang
         changeWidthFocusScreen();
+
+        // Mốt xóa
+        transToChatScreen("Hello World");
 
         // Xử lý sự kiện MessageList_Search
         $("#MessageList_SearchInput").on('focus', function () {
@@ -393,5 +398,29 @@
              })
         }
 
+    }
+
+    // Chuyển giao diện nhắn tin với User
+    function transToChatScreen(userId) {
+        showLoading(true)
+        $.ajax({
+            url: "@Url.Action("GetByUserId", "Message")",
+            type: "POST",
+            data: {
+                Id: "D5F6F4D4-581C-4AF4-97B4-563C360761BD"
+            },
+            success: function (response) {
+                showLoading(false)                                      
+                if (response.isSuccess === undefined) {
+                    $("#Messages").html(response)
+                } else {
+                    ShowThongBaoThatBai(response.message)
+                }
+            },
+            error: function (xhr, error) {
+                showLoading(false)
+                ShowThongBaoThatBai(error)
+            }
+        })
     }
 </script>
