--- a/FE/Views/Home/Index.cshtml
+++ b/FE/Views/Home/Index.cshtml
@@ -54,7 +54,7 @@
         max-height: 100%;
         min-height: 0;
         width: unset;
-        max-width: 480px;
+        max-width: 360px;
         min-width: 300px;
         margin-left: 16px;
         background-color: white;
@@ -110,7 +110,8 @@
             <button type="button"
                     class="btn btn-link d-flex align-items-center btn-Functions active"
                     data-mdb-ripple-init
-                    data-mdb-ripple-color="dark">
+                    data-mdb-ripple-color="dark"
+                    onclick="SwitchToScreen('TabMessageList')">
                 <i class="fa-solid fa-comment icon-Functions"
                    style=""></i>
                 <span class="text-Functions">Đoạn chat</span>
@@ -119,7 +120,8 @@
             <button type="button"
                     class="btn btn-link d-flex align-items-center btn-Functions"
                     data-mdb-ripple-init
-                    data-mdb-ripple-color="dark">
+                    data-mdb-ripple-color="dark"
+                    onclick="SwitchToScreen('TabMessageWaiting')">
                 <i class="fa-solid fa-comment-dots icon-Functions"></i>
                 <span class="text-Functions">Tin nhắn đang chờ</span>
             </button>
@@ -127,8 +129,9 @@
             <button type="button"
                     class="btn btn-link d-flex align-items-center btn-Functions"
                     data-mdb-ripple-init
-                    data-mdb-ripple-color="dark">
-                <i class="fa-solid fa-user-group icon-Functions"></i>
+                    data-mdb-ripple-color="dark"
+                    onclick="SwitchToScreen('TabContact')">
+                <i class="fa-solid fa-address-book icon-Functions"></i>
                 <span class="text-Functions">Lời mời kết nối</span>
             </button>
         </div>
@@ -166,54 +169,7 @@
 
     <!-- Danh sách tin nhắn -->
     <div id="MessageList">
-        <div class="card text-center flex-grow-1">
-            @* Header *@
-            <div class="card-header d-flex justify-content-between align-items-center flex-column border-bottom-0"
-                 style="padding: 6px 12px">
-                <div class="d-flex justify-content-between align-items-center w-100"
-                     style="">
-                    <span style="font-size: 1.5rem; font-weight: 700; color: black; line-height: 28px">
-                        Đoạn chat
-                    </span>
-                    <button type="button"
-                            class="btn btn-light rounded-circle"
-                            data-mdb-ripple-init
-                            data-mdb-ripple-color="dark"
-                            style="padding: 9px; margin: 6px">
-                        <i class="fa-regular fa-pen-to-square" style="font-size: 20px; color: black"></i>
-                    </button>
-                </div>
-                <div class="d-flex w-100">
-                    <button id="MessageList_Back"
-                            type="button"
-                            class="btn btn-light rounded-circle d-none"
-                            data-mdb-ripple-init
-                            data-mdb-ripple-color="dark"
-                            style="margin-right: 4px; padding: 8px 9.25px; line-height: 1; background-color: rgba(0,0,0,0)"
-                            onclick="returnMessageListScreen()">
-                        <i class="fa-solid fa-arrow-left" 
-                           style="color: black; font-size: 20px"></i>
-                    </button>
-                    <div class="d-flex w-100 align-items-center"
-                         style="background-color: rgba(134, 142, 153, .1); border-radius: 50px; overflow: hidden">
-                        <i class="fas fa-search"
-                           style="padding: 0 4px 0 14px; line-height: 36px; background-color: rgba(0,0,0,0)"></i>
-                        <input id="MessageList_SearchInput"
-                               class="w-100"
-                               type="text"
-                               placeholder="Tìm kiếm"
-                               autocomplete="off"
-                               oninput="searchMessage()">
-                    </div>
-                </div>
-            </div>
-            @* Body *@
-            <div id="MessageList_Body"
-                 class="card-body"
-                 style="padding: 6px; height: calc(100vh - 126px); overflow-x: hidden; overflow-y: auto">
-                Danh sách tin nhắn
-            </div>
-        </div>
+        
     </div>
 
     <!-- Tin nhắn -->
@@ -234,17 +190,8 @@
         // Thay đổi giao diện khi lần đầu truy cập vào trang
         changeWidthFocusScreen();
 
-        // Xử lý sự kiện MessageList_Search
-        $("#MessageList_SearchInput").on('focus', function () {
-            if ($("#MessageList_Back").hasClass("d-none")) {
-                $("#MessageList_Back").removeClass("d-none");
-                $("#MessageList_Body").html('<div id="MessageList_SearchResult"></div>')
-            }
-        });
-
-        //$("#MessageList_SearchInput").on('blur', function () {
-        //    $("#MessageList_Back").addClass("d-none")
-        //});
+        // Mặc định là MessageList
+        SwitchToScreen('TabMessageList')
     });
 
     // Hiển thị
@@ -349,7 +296,7 @@
             $("#MessageList").show()
             $("#Messages").show()
             // Reset css
-            $("#MessageList").css("max-width", "480px")
+            $("#MessageList").css("max-width", "360px")
             $("#MessageList").css("width", "unset")
             $("#Messages").css("max-width", "100%")
             $("#Messages").css("width", "unset")
@@ -390,6 +337,20 @@
                      ShowThongBaoThatBai(error)
                  }
              })
+        }
+    }
+
+    function SwitchToScreen(screen) {
+        if (screen === "TabMessageList") {
+            $.get("@Url.Action("Index", "MessageList")", function (data) {
+                $("#MessageList").html(data);
+            });
+        } else if (screen === "TabContact") {
+            $.get("@Url.Action("Index", "Contact")", function (data) {
+                $("#MessageList").html(data);
+            });
+        } else if (screen === "TabMessageWaiting") {
+            $("#MessageList").html("Tin nhắn đang chờ<br/>Tính năng đang thực hiện");
         }
     }
 </script>
