--- a/FE/Views/Shared/_Layout.cshtml
+++ b/FE/Views/Shared/_Layout.cshtml
@@ -43,6 +43,19 @@
     @* Thông báo - alert *@
     <div id="ThongBao-container" class="toast-container"></div>
 
+    <div class="modal fade" 
+         id="modal-default" 
+         data-bs-backdrop="static" 
+         data-bs-keyboard="false" 
+         tabindex="-1" 
+         aria-labelledby="staticBackdropLabel" 
+         aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" 
+             id='modalContainer'
+             >
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/@@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
