--- a/FE/Views/Home/Index.cshtml
+++ b/FE/Views/Home/Index.cshtml
@@ -72,7 +72,6 @@
         min-width: 300px;
         background-color: white;
         border-radius: 12px;
-        box-shadow: 0px 0px 8px rgba(52, 72, 84, .05);
         margin-left: 16px;
         display: flex;
         flex: 3;
@@ -174,7 +173,7 @@
 
     <!-- Tin nhắn -->
     <div id="Messages">
-        <div class="card text-center flex-grow-1">
+        <div class="card text-center flex-grow-1" style="box-shadow: 0px 0px 8px rgba(52, 72, 84, .05);">
             <div class="card-header">Featured</div>
             <div class="card-body">
                 Message - Tin nhắn
